Station Repository test refactory