@@ -1,6 +1,7 @@
 package nikev.group.project.chargingplatform.repository;
 
 import nikev.group.project.chargingplatform.model.Station;
+import nikev.group.project.chargingplatform.repository.StationRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
@@ -30,7 +31,7 @@ class StationRepositoryTest {
             .withPassword("test");
 
     @Autowired
-    private ChargingStationRepository chargingStationRepository;
+    private StationRepository stationRepository;
 
     @Test
     void testSaveAndFindById() {
@@ -45,8 +46,8 @@ class StationRepositoryTest {
         station.setTimetable("24/7");
 
         // When
-        Station saved = chargingStationRepository.save(station);
-        Optional<Station> found = chargingStationRepository.findById(saved.getId());
+        Station saved = stationRepository.save(station);
+        Optional<Station> found = stationRepository.findById(saved.getId());
 
         // Then
         assertThat(found).isPresent();
@@ -60,17 +61,21 @@ class StationRepositoryTest {
         Station station1 = new Station();
         station1.setName("Station 1");
         station1.setLocation("Location 1");
-        station1.setStatus(Station.StationStatus.AVAILABLE);
-        station1.setConnectorTypes(Arrays.asList("CCS"));
-        station1.setChargingSpeedKw(50.0);
-        chargingStationRepository.save(station1);
+        station1.setLatitude(10.0);
+        station1.setLongitude(20.0);
+        station1.setPricePerKwh(0.25);
+        station1.setSupportedConnectors(List.of("CCS"));
+        stationRepository.save(station1);
 
         // When
-        List<Station> stations = chargingStationRepository.findAll();
+        List<Station> stations = stationRepository.findAll();
 
         // Then
         assertThat(stations).hasSize(1);
-        assertThat(stations.get(0).getName()).isEqualTo("Station 1");
+        Station found = stations.get(0);
+        assertThat(found.getName()).isEqualTo("Station 1");
+        assertThat(found.getLocation()).isEqualTo("Location 1");
+        assertThat(found.getPricePerKwh()).isEqualTo(0.25);
     }
 
     @Test
@@ -79,12 +84,15 @@ class StationRepositoryTest {
         Station station = new Station();
         station.setName("Test Station");
         station.setLocation("Test Location");
-        station.setStatus(Station.StationStatus.AVAILABLE);
-        Station saved = chargingStationRepository.save(station);
+        station.setLatitude(10.0);
+        station.setLongitude(20.0);
+        station.setPricePerKwh(0.25);
+        station.setSupportedConnectors(List.of("CCS"));
+        Station saved = stationRepository.save(station);
 
         // When
-        chargingStationRepository.delete(saved);
-        Optional<Station> found = chargingStationRepository.findById(saved.getId());
+        stationRepository.delete(saved);
+        Optional<Station> found = stationRepository.findById(saved.getId());
 
         // Then
         assertThat(found).isEmpty();
@@ -96,10 +104,9 @@ class StationRepositoryTest {
         Station station = new Station();
         station.setName("Test Station");
         station.setLocation("Test Location");
-        station.setStatus(Station.StationStatus.AVAILABLE);
         station.setLatitude(40.7128);
         station.setLongitude(-74.0060);
-        chargingStationRepository.save(station);
+        stationRepository.save(station);
 
         // When
         Specification<Station> spec = (root, query, cb) -> {
@@ -109,7 +116,7 @@ class StationRepositoryTest {
                 cb.between(root.get("longitude"), -74.0060 - radiusDegrees, -74.0060 + radiusDegrees)
             );
         };
-        List<Station> nearbyStations = chargingStationRepository.findAll(spec);
+        List<Station> nearbyStations = stationRepository.findAll(spec);
 
         // Then
         assertThat(nearbyStations).hasSize(1);
@@ -122,23 +129,19 @@ class StationRepositoryTest {
         Station station = new Station();
         station.setName("Test Station");
         station.setLocation("Test Location");
-        station.setStatus(Station.StationStatus.AVAILABLE);
-        station.setConnectorTypes(Arrays.asList("CCS", "Type 2"));
-        station.setChargingSpeedKw(50.0);
-        station.setCarrierNetwork("Test Network");
-        station.setAverageRating(4.5);
-        chargingStationRepository.save(station);
+        station.setLatitude(0.0);
+        station.setLongitude(0.0);
+        station.setPricePerKwh(0.30);
+        station.setSupportedConnectors(List.of("CCS", "Type 2"));
+        stationRepository.save(station);
 
         // When
-        Specification<Station> spec = (root, query, cb) -> {
-            return cb.and(
-                cb.isMember("CCS", root.get("connectorTypes")),
-                cb.greaterThanOrEqualTo(root.get("chargingSpeedKw"), 50.0),
-                cb.equal(root.get("carrierNetwork"), "Test Network"),
-                cb.greaterThanOrEqualTo(root.get("averageRating"), 4.0)
-            );
-        };
-        List<Station> filteredStations = chargingStationRepository.findAll(spec);
+        Specification<Station> spec = (root, query, cb) -> cb.and(
+            cb.isMember("CCS", root.get("supportedConnectors")),
+            cb.lessThanOrEqualTo(root.get("pricePerKwh"), 0.50),
+            cb.equal(root.get("location"), "Test Location")
+        );
+        List<Station> filteredStations = stationRepository.findAll(spec);
 
         // Then
         assertThat(filteredStations).hasSize(1);
